fix button styles from search bar and align containers on rooms new page; update Read me file

--- a/app/assets/stylesheets/rooms/new.scss
+++ b/app/assets/stylesheets/rooms/new.scss
@@ -1,6 +1,11 @@
 #main-title {
     width: 28%;
-    margin: auto;
-    
+    margin: 20px auto;
     font-size: 25px;
+    text-align: center;
+}
+
+.container {
+    margin: 0 auto;
+    padding-left: 0 !important;
 }
